--- a/infra/ansible/ansible.cfg
+++ b/infra/ansible/ansible.cfg
@@ -3,6 +3,7 @@ roles_path = ./roles
 host_key_checking = False
 retry_files_enabled = False
 timeout = 30
+allow_world_readable_tmpfiles = True
 
 # Defaults (prefer env or CLI overrides; no hard-coded remote_user)
 # remote_user is intentionally not set here. Use one of the following:
